--- a/index.html
+++ b/index.html
@@ -1209,6 +1209,9 @@
 					<td>
 					<ul><li>						
 						<strong>M.Sc. evaluation comittees: </strong>
+						<a href="DEI-SOFIAPS">Francisco Rodrigues</a> |
+						<a href="DEEC-PAULOLOPES">Tiago Miranda</a> |
+
 						<a href="NOVA-MAGALHAES">Afonso Simplício</a> |
 						<a href="MEEC-DAVID">João Gomes</a> |
 						<a href="MEEC-VASCONCELOS">João Nunes</a> |
