--- a/index.html
+++ b/index.html
@@ -372,6 +372,7 @@
 			<h3>Conference and Workshop Papers</h3>
 
 			<ul>
+<li>Gonçalo Gomes, Chrysoula Zerva, and Bruno Martins, <i>A Conformal Risk Control Framework for Granular Word Assessment and Uncertainty Calibration of CLIPScore Quality Estimates</i>, Findings of the Annual Conference of the Association for Computational Linguistics, 2025 [<a href="https://arxiv.org/abs/2504.01225">PDF</a>]</li>
 <li>Joao Coelho, Bruno Martins, João Magalhães, and Chenyan Xiong, <i>Aligning Web Query Generation with Ranking Objectives via Direct Preference Optimization</i>, Proceedings of the International ACM SIGIR Conference on Research and Development in Information Retrieval, 2025 [<a href="">PDF</a>]</li>
 <li>Leonor Barreiros, Isabel Coutinho, Gonçalo M. Correia, and Bruno Martins, <i>Explainable ICD Coding via Entity Linking</i>, Proceedings of the NAACL Workshop on Patient-Oriented Language Processing, 2025 [<a href="">PDF</a>]</li>
 <li>João Daniel Silva, João Magalhães, Devis Tuia, and Bruno Martins, <i>Large Language Models for Captioning and Retrieving Remote Sensing Images</i>, Proceedings of the ICLR Workshop on Machine Learning for Remote Sensing, 2025 [<a href="">PDF</a>]</li>
