--- a/index.html
+++ b/index.html
@@ -628,9 +628,9 @@
 			</ul>
 			<h3>PhD Students</h3>
 			<ul>
-			<li>Tiago Gonçalves, <i>Visual Analysis of Human Mobility Data</i>, FCUL, 2017 (<i>co-supervised with Prof. Ana Paula Afonso</i>)</li>
+			<li>Tiago Gonçalves, <i>Map-based Interaction with Trajectory Data</i>, FCUL, 2017 (<i>co-supervised with Prof. Ana Paula Afonso</i>)</li>
 			<li>João Monteiro, <i>Deep Learning for Geospatial Data Disaggregation</i>, IST, 2023 (<i>co-supervised with Prof. João Moura Pires</i>)</li>
-			<li>Rita Ramos, <i>Deep Learning Methods Bridging Language and Vision</i>, IST/KU.DK (<i>co-supervised with Prof. Desmond Elliott</i>)</li>				
+			<li>Rita Ramos, <i>Image Captioning with Retrieval Augmentation</i>, IST/KU.DK, 2025 (<i>co-supervised with Prof. Desmond Elliott</i>)</li>				
 			<li>Luís Borges, <i>Neural Information Retrieval</i>, IST/CMU-PT (<i>ongoing co-supervision with Prof. Jamie Callan</i>)</li>
 			<!-- <li>André Neves, <i>Deep Learning for Remote Sensing Applications</i>, FCT-UNL (<i>ongoing co-supervision with Prof. João Moura Pires and Prof. Carlos Damásio</i>)</li> -->			
 			<!-- <li>Gonçalo Raposo, <i>Conversational Search</i>, IST (<i>ongoing co-supervision with Prof. Luísa Coheur</i>)</li> -->
