--- a/index.html
+++ b/index.html
@@ -796,11 +796,7 @@
 			<li>Vasco Rocha, <a href="https://fenix.tecnico.ulisboa.pt/cursos/meic-a/dissertacao/283828618791088"><i>Discretization Aware Differentiable ARchiTecture Search</i></a>, IST, 2024 (<i>co-supervised with Prof. Paolo Romano</i>)</li> <!-- 17 valores -->
 			<li>João Silva, <a href="https://fenix.tecnico.ulisboa.pt/cursos/meic-a/dissertacao/283828618791102"><i>Retrieval-Augmented Text-Only Training for Image Captioning</i></a>, IST, 2024 (<i>co-supervised with Prof. David Matos</i>)</li> <!-- 19 valores -->
 			<li>Kaiwei Chen, <a href=""><i>What Makes Multimodal Chain-of-Thought Matter in Complex Multimodal Reasoning Tasks?</i></a>, Utrecht University, 2024</li> <!-- 7.5 valores -->
-				
-			<!-- <li>Dora Lourenço, <a href=""><i>Explainable AI for Anti-Money Laundering</i></a>, IST, 2022 (<i>co-supervised with Dr. Pedro Saleiro</i>)</li> -->
-			<!-- <li>Duarte Miranda, <a href=""><i>Neural Retrieval Models for the Portuguese Language</i></a>, IST, 2022 (<i>co-supervised with Dra. Mariana Almeida</i>)</li> --> <!-- ?? valores -->
-			<!-- <li>Eduardo Ladeiras, <a href=""><i>Visually Grounded Speech Recognition </i></a>, IST, 2024</li> -->				
-			
+							
 			<li>Leonor Barreiros, <a href=""><i>Semi-Supervised Medical Entity Linking</i></a>, IST, 2024 (<i>co-supervised with Dr. Gonçalo Correia</i>)</li> <!-- 19 valores -->
 			<li>Diogo Branco, <a href=""><i>Adapting large language models for the domain of clinical trials</i></a>, IST, 2024 (<i>co-supervised with Prof. Arlindo Oliveira</i>)</li> <!-- 17 valores -->
 			<li>Catarina Valério, <a href=""><i>Using Large Language Models to Summarize Patient-Physician Dialogues into Medical Notes</i></a>, IST, 2024 (<i>co-supervised with Dr. Gonçalo Correia</i>)</li> <!-- 18 valores -->
@@ -810,7 +806,7 @@
 			<li>Nuno Machado, <a href=""><i>Optimizing Prompts for Large Language Models Using Evolutionary Algorithms</i></a>, IST, 2024 (<i>co-supervised with Prof. Joao Paulo Carvalho</i>)</li> <!-- 19 valores -->
 
 			<li>Inês Mota, <a href=""><i>Using Large Language Models to Compose Discharge Summaries from Clinical Notes</i></a>, IST, 2025 (<i>co-supervised with Dr. Gonçalo Correia</i>)</li> <!-- 18 valores -->
-			<li>João Nabais, <a href=""><i>Adapting large language models for the domain of clinical trials</i></a>, IST, 2025 (<i>co-supervised with Prof. Arlindo Oliveira</i>)</li> <!-- ?? valores -->
+			<li>João Nabais, <a href=""><i>Adapting large language models for the domain of clinical trials</i></a>, IST, 2025 (<i>co-supervised with Prof. Arlindo Oliveira</i>)</li> <!-- 18 valores -->
 
 			<li>Manuel Palo, <a href=""><i>Translating sign language into text with large language models</i></a>, IST, 2025 (<i>co-supervised with Prof. Luísa Coheur</i>)</li> <!-- ?? valores -->
 			<li>Francisco Nogueira, <a href=""><i>Comprehension of Multilingual Expressions Referring to Target Objects in Visual Inputs</i></a>, IST, 2025 (<i>co-supervised with Prof. Alexandre Bernardino</i>)</li> <!-- ?? valores -->
@@ -818,10 +814,13 @@
 			<li>João Cardoso, <a href=""><i>Characterization of the Internal Representations of Multi-Modal Large Language Models</i></a>, IST, 2025 (<i>co-supervised with Prof. Arlindo Oliveira</i>)</li> <!-- ?? valores -->
 			<li>Rui Alves da Fonseca, <a href=""><i>Training-Free Multilingual Image Captioning</i></a>, IST, 2025 (<i>co-supervised with Dr. Gil Rocha</i>)</li> <!-- ?? valores -->
 			<li>Pedro Claro, <a href=""><i>Vision-and-Language Expert Models for 360-Degree Imagery</i></a>, IST, 2025 <!-- ?? valores -->
-
 			<li>Carlos Rebelo, <a href=""><i>Training-Free Captioning of Remote Sensing Aerial Imagery</i></a>, IST, 2025 <!-- ?? valores -->
 			<li>Ricardo Almeida, <a href=""><i>Deep Learning Approaches to Detect Digital Image Forgery</i></a>, IST, 2025 (<i>co-supervised with Prof. Arlindo Oliveira</i>) <!-- ?? valores -->
 			<li>Miguel Rebocho, <a href=""><i>Open-ended Named Entity Recognition</i></a>, IST, 2025 (<i>co-supervised with Dr. Miguel Freire</i>) <!-- ?? valores -->
+
+			<li>Rodrigo Laia, <a href=""><i>Handling Portuguese Varieties with Pre-Trained Language Models</i></a>, IST, 2026 (<i>co-supervised with Prof. Arlindo Oliveira</i>) <!-- ?? valores -->
+			<li>Artur Monteiro, <a href=""><i>Incorporating speech into a European Portuguese LLM using discretized self-supervised reprentations</i></a>, IST, 2026 (<i>co-supervised with Prof. Alberto Abad</i>) <!-- ?? valores -->
+			<li>António Morais de Carvalho, <a href=""><i>Towards More Natural Human-Robot Interaction Using Multimodal LLMs</i></a>, IST, 2026 (<i>co-supervised with Prof. Pedro Lima</i>) <!-- ?? valores -->
 			</ul>
 		</td>
     </tr>
