--- a/index.html
+++ b/index.html
@@ -223,6 +223,9 @@
 	</tr>
     	<tr>
 		<td>
+			2025/2026 | <a href="https://fenix.tecnico.ulisboa.pt/disciplinas/EITT36/2025-2026/2-semestre">Entrepreneurship, Innovation and Technology Transfer</a> (IST,MEEC)<br/>
+			2025/2026 | <a href="https://fenix.tecnico.ulisboa.pt/disciplinas/PF36/2025-2026/2-semestre">Spoken Language Processing</a> (IST,MEEC,MEIC,MECD)<br/>
+			2025/2026 | <a href="https://fenix.tecnico.ulisboa.pt/disciplinas/Pro336/2025-2026/2-semestre">Programming</a> (IST,LEEC)<br/>
 			2024/2025 | <a href="https://fenix.tecnico.ulisboa.pt/disciplinas/EITT36/2024-2025/2-semestre">Entrepreneurship, Innovation and Technology Transfer</a> (IST,MEEC)<br/>
 			2024/2025 | <a href="https://fenix.tecnico.ulisboa.pt/disciplinas/PF36/2024-2025/2-semestre">Spoken Language Processing</a> (IST,MEEC,MEIC,MECD)<br/>
 			2024/2025 | <a href="https://fenix.tecnico.ulisboa.pt/disciplinas/Pro336/2024-2025/2-semestre">Programming</a> (IST,LEEC)<br/>
