--- a/index.html
+++ b/index.html
@@ -1169,6 +1169,7 @@
 						<a href="https://scholar.google.co.uk/citations?user=kDNpYKEAAAAJ">Afonso Sousa</a> |						
 						<a href="https://www.cienciavitae.pt/261E-CB39-416C">John Mendonça</a> |						
 
+						<a href="https://scholar.google.com/citations?user=yK5wIPkAAAAJ">António Farinhas</a> |
 						<a href="https://www.linkedin.com/in/gabrieljesus/">Gabriel de Jesus</a> |						
 						<a href="http://web.tecnico.ulisboa.pt/soraiafpaulo/">Soraia Paulo</a> |						
 						<a href="https://nunonmg.github.io/">Nuno Guerreiro</a> |
