--- a/meeting-room.html
+++ b/meeting-room.html
@@ -3,8 +3,9 @@
 <head>
 <meta charset="UTF-8">
 <title>Bruno Martins - Meeting Room in Google Meet</title>
+<meta http-equiv="refresh" content="0;url=https://meet.google.com/ure-sztc-vwp" />  
 <script> part = "ure-sztc-vwp"; <script>
-<script> window.onload = function() { window.location.href = "https://meet.google.com" + part; } </script>
+<script> window.onload = function() { window.location.replace("https://meet.google.com/" + part); } </script>
 </head>
 <body>
 <p>Redirecting you to Bruno Martins's meeting room in Google Meet.</p>
