--- a/meeting-room.html
+++ b/meeting-room.html
@@ -8,6 +8,6 @@
 <script> window.onload = function() { window.location.replace("https://meet.google.com/" + part); } </script>
 </head>
 <body>
-<p>Redirecting you to Bruno Martins's meeting room in Google Meet.</p>
+<p>Redirecting you to the meeting room for Bruno Martins in Google Meet.</p>
 </body>
 </html>
