--- a/index.html
+++ b/index.html
@@ -646,6 +646,7 @@
 			<li>Piotr Gramacki, <i>Geospatial Language Models</i>, IST (<i>ongoing co-supervision with Prof. Piotr Szymański</i>)</li>
 			<li>Francisco Guedes, <i>Knowledge Representation Across Humans and Machines</i>, IST (<i>ongoing co-supervision with Prof. Arlindo Oliveira and Prof. Leila Wehbe</i>)</li>
 			<li>Afonso Certo, <i>End-to-End Robot Task Planning from Voice Commands</i>, IST (<i>ongoing co-supervision with Prof. Pedro U. Lima</i>)</li>
+			<li>Jorge Cerejo, <i>Multimodal Representation Learning for Patient Similarity and Predictive Modeling in Hospital Care</i>, IST </li>
 			</ul>
 			<h3>MSc Students</h3>
 			<ul>
@@ -825,7 +826,6 @@
 			<li>Artur Monteiro, <a href=""><i>Incorporating speech into a European Portuguese LLM using discretized self-supervised reprentations</i></a>, IST, 2026 (<i>co-supervised with Prof. Alberto Abad</i>) <!-- ?? valores -->
 			<li>António Morais de Carvalho, <a href=""><i>Towards More Natural Human-Robot Interaction Using Multimodal LLMs</i></a>, IST, 2026 (<i>co-supervised with Prof. Pedro Lima</i>) <!-- ?? valores -->
 			<li>Maria Ribeiro, <a href=""><i>Adapting language models with reasoning capabilities to the domain of clinical trials</i></a>, IST, 2026 (<i>co-supervised with Prof. João Magalhães</i>) <!-- ?? valores -->
-			<li> Jaime Silva , <a href=""><i>Autonomous AI Co-Founders Using LLM-Based Agents to Simulate Entrepreneurial Decision-Making</i></a>, IST, 2026 (<i>co-supervised with Eng. Daniel Quintas</i>) <!-- ?? valores -->
 			<!-- <li>David Gomes, <a href=""><i>Mixture of Bayesian experts for fraud detection in credit card transactions</i></a>, IST, 2026 (<i>co-supervised with Prof. Miguel Couceiro</i>) --><!-- ?? valores -->
 			</ul>
 		</td>
