--- a/index.html
+++ b/index.html
@@ -1216,6 +1216,8 @@
 					<td>
 					<ul><li>						
 						<strong>M.Sc. evaluation comittees: </strong>
+						<a href="DEI-COHEUR">João Almeida</a> |
+						
 						<a href="DEI-SOFIAPS">Francisco Rodrigues</a> |
 						<a href="DEEC-PAULOLOPES">Tiago Miranda</a> |
 
