--- a/index.html
+++ b/index.html
@@ -826,7 +826,7 @@
 			<li>Artur Monteiro, <a href=""><i>Incorporating speech into a European Portuguese LLM using discretized self-supervised reprentations</i></a>, IST, 2026 (<i>co-supervised with Prof. Alberto Abad</i>) <!-- ?? valores -->
 			<li>António Morais de Carvalho, <a href=""><i>Towards More Natural Human-Robot Interaction Using Multimodal LLMs</i></a>, IST, 2026 (<i>co-supervised with Prof. Pedro Lima</i>) <!-- ?? valores -->
 			<li>Maria Ribeiro, <a href=""><i>Adapting language models with reasoning capabilities to the domain of clinical trials</i></a>, IST, 2026 (<i>co-supervised with Prof. João Magalhães</i>) <!-- ?? valores -->
-			<!-- <li>David Gomes, <a href=""><i>Mixture of Bayesian experts for fraud detection in credit card transactions</i></a>, IST, 2026 (<i>co-supervised with Prof. Miguel Couceiro</i>) --><!-- ?? valores -->
+			<li>David Gomes, <a href=""><i>Mixture of Bayesian experts for fraud detection in credit card transactions</i></a>, IST, 2026 (<i>co-supervised with Prof. Miguel Couceiro</i>) <!-- ?? valores -->
 			</ul>
 		</td>
     </tr>
@@ -1409,3 +1409,4 @@
 </div>
 </body>
 </html>
+
