--- a/index.html
+++ b/index.html
@@ -896,9 +896,12 @@
 					<td>
 					<ul><li>
 						<strong>Member of programe committees and reviewer: </strong>
-					        <a href="https://2025.ijcai.org/call-for-papers-ai4tech-ai-enabling-critical-technologies/">IJCAI'25</a> |
+						<a href="https://ecir2026.eu">ECIR'26</a> |
+						<a href="https://cikm2025.org">CIKM'25</a> |
+						<a href="https://simbig.org/SIMBig2025/">SIMBig'25</a> |					    
+						<a href="https://2025.ijcai.org/call-for-papers-ai4tech-ai-enabling-critical-technologies/">IJCAI'25</a> |
 						<a href="https://xaiworldconference.com/2025/">XAI'25</a> |
-					        <a href="https://sigir2025.dei.unipd.it">SIGIR'25</a> |
+					    <a href="https://sigir2025.dei.unipd.it">SIGIR'25</a> |
 						<a href="https://tpdl2025.github.io">TPDL'25</a> |						
 						<a href="https://giscience2025.org">GIScience'25</a> |						
 						<a href="https://dhnb.eu/conferences/dhnb2025/">DHNB'25</a> |						
@@ -1409,4 +1412,5 @@
 </div>
 </body>
 </html>
+
 
