--- a/index.html
+++ b/index.html
@@ -820,6 +820,7 @@
 			<li>Pedro Claro, <a href=""><i>Vision-and-Language Expert Models for 360-Degree Imagery</i></a>, IST, 2025 <!-- ?? valores -->
 			<li>Carlos Rebelo, <a href=""><i>Training-Free Captioning of Remote Sensing Aerial Imagery</i></a>, IST, 2025 <!-- ?? valores -->
 			<li>Ricardo Almeida, <a href=""><i>Deep Learning Approaches to Detect Digital Image Forgery</i></a>, IST, 2025 (<i>co-supervised with Prof. Arlindo Oliveira</i>) <!-- ?? valores -->
+			<li>Clara Pereira, <a href=""><i>Improving Retrieval Augmented Generation with LLMs</i></a>, IST, 2025 (<i>co-supervised with Prof. Arlindo Oliveira</i>) <!-- ?? valores -->
 			<li>Miguel Rebocho, <a href=""><i>Open-ended Named Entity Recognition</i></a>, IST, 2025 (<i>co-supervised with Dr. Miguel Freire</i>) <!-- ?? valores -->
 
 			<li>Rodrigo Laia, <a href=""><i>Handling Portuguese Varieties with Pre-Trained Language Models</i></a>, IST, 2026 (<i>co-supervised with Prof. Arlindo Oliveira</i>) <!-- ?? valores -->
@@ -1412,5 +1413,6 @@
 </div>
 </body>
 </html>
+
 
 
