--- a/index.html
+++ b/index.html
@@ -391,7 +391,7 @@
 <li>Rita Ramos, Emanuele Bugliarello, Bruno Martins, and Desmond Elliott, <i>PAELLA: Parameter-Efficient Lightweight Language-Agnostic Captioning Model</i>, Findings of the Annual Conference of the North American Chapter of the Association for Computational Linguistics, 2024 [<a href="https://doi.org/10.18653/v1/2024.findings-naacl.225">PDF</a>]</li>
 <li>Gonçalo Gomes, Isabel Coutinho, and Bruno Martins, <i>Accurate and Well-Calibrated ICD Coding Through Attention Over Diverse Label Embeddings</i>, Proceedings of the Conference of the European Chapter of the Association for Computational Linguistics, 2024 [<a href="https://arxiv.org/abs/2402.03172">PDF</a>]</li>
 <li>Luís Borges, Jamie Callan, and Bruno Martins, <i>Team CMU-LTI at TREC 2023 Tip-of-the-Tongue Track</i>, Proceedings of the Text Retrieval Conference, 2023 [<a href="https://trec.nist.gov/pubs/trec32/papers/CMU-LTI.T.pdf">PDF</a>]</li>
-<li>João Pedro Novo, Manuel Goulão, Lourenço Bandeira, Bruno Martins, and Arlindo L. Oliveira, <i>Augmentation-Based Approaches for Overcoming Low Visibility in Street Object Detection</i>, Proceedings of the International Conference on Machine Learning and Applications, [<a href="https://ieeexplore.ieee.org/document/10460034">PDF</a>]</li>
+<li>João Pedro Novo, Manuel Goulão, Lourenço Bandeira, Bruno Martins, and Arlindo L. Oliveira, <i>Augmentation-Based Approaches for Overcoming Low Visibility in Street Object Detection</i>, Proceedings of the International Conference on Machine Learning and Applications, 2023 [<a href="https://ieeexplore.ieee.org/document/10460034">PDF</a>]</li>
 <li>Miguel Gonçalves, Bruno Martins, and Jacinto Estima, <i>A Detailed Analysis on the Use of General-purpose Vision Transformers for Remote Sensing Image Segmentation</i>, Proceedings of the International ACM SIGSPATIAL Workshop on AI for Geographic Knowledge Discovery, 2023 [<a href="https://doi.org/10.1145/3615886.3627751">PDF</a>]</li>				
 <li>Helder Dias, Artur Guimarães, Bruno Martins, and Mathieu Roche, <i>Unsupervised Key-Phrase Extraction from Long Texts with Multilingual Sentence Transformers</i>, Proceedings of the International Conference on Discovery Science, 2023 [<a href="https://doi.org/10.1007/978-3-031-45275-8_10">PDF</a>]</li>
 <li>Isabel Coutinho, and Bruno Martins, <i>Exploring Label Correlations for Quantification of ICD Codes</i>, Proceedings of the International Conference on Discovery Science, 2023 [<a href="https://doi.org/10.1007/978-3-031-45275-8_41">PDF</a>]</li>
@@ -1413,6 +1413,7 @@
 </div>
 </body>
 </html>
+
 
 
 
