--- a/index.html
+++ b/index.html
@@ -375,6 +375,7 @@
 			<h3>Conference and Workshop Papers</h3>
 
 			<ul>
+<li>Kshitij Ambilduke, Ben Peters, Sonal Sannigrahi, Anil Keshwani, Tsz Kin Lam, Bruno Martins, Marcely Zanon Boito, and André F.T. Martins, <i>From TOWER to SPIRE: Adding the Speech Modality to a Text-Only LLM</i>, Findings of the Conference on Empirical Methods in Natural Language Processing, 2025 [<a href="https://arxiv.org/abs/2503.10620">PDF</a>]</li>				
 <li>Afonso Certo, Bruno Martins, Carlos Azevedo, and Pedro U. Lima, <i>Large Language Model-Based Robot Task Planning from Voice Command Transcriptions</i>, Proceedings of the IEEE/RSJ International Conference on Intelligent Robots and Systems, 2025 [<a href="">PDF</a>]</li>
 <li>Gonçalo Gomes, Chrysoula Zerva, and Bruno Martins, <i>A Conformal Risk Control Framework for Granular Word Assessment and Uncertainty Calibration of CLIPScore Quality Estimates</i>, Findings of the Annual Conference of the Association for Computational Linguistics, 2025 [<a href="https://arxiv.org/abs/2504.01225">PDF</a>]</li>
 <li>Joao Coelho, Bruno Martins, João Magalhães, and Chenyan Xiong, <i>Aligning Web Query Generation with Ranking Objectives via Direct Preference Optimization</i>, Proceedings of the International ACM SIGIR Conference on Research and Development in Information Retrieval, 2025 [<a href="https://arxiv.org/abs/2505.19307">PDF</a>]</li>
@@ -1413,6 +1414,7 @@
 </div>
 </body>
 </html>
+
 
 
 
